# coin-or-clp-java-api

./: .gitignore  CMakeLists.txt  README.md  codemagic.yaml  pom.xml  pom_linux32.xml  pom_linux64.xml  pom_macos.xml  pom_win32.xml  pom_win64.xml
.github/workflows/: build_linux.yaml  build_osx.yaml  build_windows.yaml  test_windows.yaml
api/: CMakeLists.txt
api/src/: CLPModel.cpp  CLPModel.h  CLPModelWrapper_JNA.cpp  CLPModelWrapper_JNI.cpp  CMakeLists.txt
api/test/: CLPTest.cpp
mac_utils/: README.txt  int  make_rpaths
test/: CLPTest.cpp  CMakeLists.txt  glp_sirius_test.mps
